# CS205-Proj4

./: .gitignore  CMakeLists.txt  main.c  readme.md
inc/: mat.h
report/: report.md
src/: mat.c
